# agentinsight-researcher

./: .all-contributorsrc  .dockerignore  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  AGENTS.md  AgentInsightAgents.pyproj  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  Dockerfile.offline  Dockerfile.searxng  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-build.offline.sh  docker-build.sh  docker-compose-offline.yaml  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  server.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  security.yml
config/researcher/industry_prompts/: aerospace_defense.yaml  air_freight_logistics.yaml  airlines.yaml  apparel_retail.yaml  banks.yaml  (+69 more)
config/searxng/: limiter.toml  settings.yml
docs/: COMPARISON_WITH_GPT_RESEARCHER_V6.md  CONTAINER_ERROR_FIX_PLAN.md  CONTAINER_ERROR_FIX_PLAN_V2.md  MEMORY_ANALYSIS_REPORT.md  MEMORY_ANALYSIS_REPORT_V2.md  MULTI_AGENT_OPTIMIZATION_PLAN.md  OPEN_SOURCE_READINESS_ASSESSMENT.md  PRIVACY.md  REQUIREMENTS.md  RERANK_NECESSITY_REPORT.md  ROADMAP.md  SEARCH_ENGINES_ANALYSIS.md  TOKEN_COST_COMPARISON.md  architecture.md  deployment.md  development.md  faq.md  system-mcp-analysis.md
evals/: __init__.py
evals/agent/: __init__.py  dataset.json  evaluate.py  run.py
evals/hallucination_eval/: __init__.py  evaluate.py  run_eval.py
evals/rag/: __init__.py  _asyncio_fix.py  _compat_shim.py  _subprocess_eval.py  dataset.json  evaluate.py  run.py
evals/simple_evals/: __init__.py  run_eval.py  simpleqa_eval.py
examples/: README.md  detailed_report.py  download_report.py  file_upload_research.py  multi_agent_research.py  openai_sdk_compatible.py  quickstart.py  streaming_research.py
frontend/: .dockerignore  .env.frontend  .env.template  Dockerfile  Dockerfile.offline  middleware.ts  next.config.ts  package-lock.json  package.json  postcss.config.js  tsconfig.json
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/lib/: agent-store.ts  agents.config.ts  api-client.ts  auth-api.ts  auth-store.ts  cache.ts  nav-store.ts  session-store.ts  stream-store.ts  types.ts  use-chat.ts  utils.ts  ws-client.ts
scripts/: build-online.ps1  convert_bge_small_zh_to_onnx.py  init.sql  offline-deploy.ps1  patch-searxng-engines.py  prepare-frontend-packages.ps1  prepare-frontend-packages.sh  prepare-nodejs-packages.ps1  prepare-nodejs-packages.sh  prepare-playwright-chromium.ps1  prepare-playwright-chromium.sh  prepare-searxng-packages.ps1  prepare-searxng-packages.sh  prepare-uv-packages.ps1  prepare-uv-packages.sh
src/: __init__.py  cli.py
src/agents/: __init__.py
src/api/: __init__.py  agent_discovery.py  agentinsight_client.py  feedback_queue.py  ip_user_resolver.py  mcp_routes.py  middleware.py  routes.py  session_routes.py  websocket.py
src/common/: __init__.py  circuit_breaker.py  exceptions.py  http_client.py  json_utils.py  llm_key_resolver.py  redis_client.py  redis_lock.py
src/config/: __init__.py  settings.py
src/graph/: __init__.py  builder.py  chat_builder.py  edges.py  multi_agent_builder.py  nodes.py  state.py
src/llm/: __init__.py  client.py  token_budget.py
src/memory/: __init__.py  checkpointer.py  db_initializer.py  report_store.py  session_store.py
src/observability/: __init__.py  tracing.py
src/rag/: __init__.py  bm25_filter.py  embeddings.py  embeddings_filter.py  fastembed_client.py  knowledge_bootstrap.py  qdrant_manager.py  retriever.py
src/skills/: __init__.py
src/tools/: __init__.py
static/: index.html
tests/: README.md  REPORT.md  conftest.py
tests/api/: __init__.py  test_chat_completions.py  test_feedback.py  test_files.py  test_mcp_endpoints.py  test_reports.py  test_security.py  test_security_injection.py  test_tool_permissions.py
tests/e2e/: __init__.py  test_api_flow.py  test_human_in_loop.py  test_mcp_e2e_example.py  test_page_flow.py
tests/exploratory/: __init__.py  test_config_combinations.py  test_deep_research_adaptive.py  test_degradation.py  test_edge_cases.py  test_optimization_degradation.py  test_optimization_edge_cases.py
tests/functional/: __init__.py  test_container_health.py  test_embeddings_service.py  test_mcp_research_e2e.py  test_mcp_research_flow.py  test_openai_compat_endpoint.py  test_postgres_service.py  test_qdrant_service.py  test_redis_service.py  test_smoke_functional.py
tests/performance/: conftest.py  test_concurrent_load.py  test_context_compression_perf.py  test_deep_research_perf.py  test_fastembed_perf.py  test_latency.py  test_load.py  test_performance_baseline.py  test_performance_rag.py  test_search_cache_perf.py  test_throughput.py  test_v4p3_performance.py
tests/regression/: __init__.py  test_research_basic_report.py  test_session_persistence.py  test_short_query.py  test_toc_consistency.py
tests/unit/: __init__.py  conftest.py  test_agentinsight_client.py  test_agents_chat_agent.py  test_agents_fact_checker.py  test_agents_human.py  test_agents_reviewer.py  test_agents_reviser.py  test_agents_supervisor.py  test_api_agent_discovery.py  test_api_feedback_queue.py  test_api_mcp_routes.py  test_api_middleware.py  test_api_security.py  test_api_session_routes.py  test_api_websocket.py  test_arxiv_searcher.py  test_bing_searcher.py  test_bm25_filter.py  test_bm25_integration.py  test_bm25_redis_cache.py  test_bocha_searcher.py  test_brave_searcher.py  test_bs_markdownify_scraper.py  test_cached_search.py  test_chapter_parallel.py  test_chat_builder.py  test_checkpointer_unified.py  test_chitchat_responder.py  test_cli.py  test_close_http_client.py  test_common_circuit_breaker.py  test_common_exceptions.py  test_common_json_utils.py  test_config.py  test_config_loader.py  test_config_persona.py  test_context_compression.py  test_crossref_searcher.py  test_daily_report_limit.py  (+100 more)
(+131 files in other folders)
