# agentinsight-researcher Python 项目配置
# 严格遵循 AGENTS.md 第 1 章: Python ≥3.11

[project]
name = "agentinsight-researcher"
version = "0.1.0"
description = "中文优先的研究分析智能体, 对标 GPT Researcher, 基于 LangGraph + LiteLLM + Qdrant"
requires-python = ">=3.11"
readme = "README.md"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP", "ASYNC"]
ignore = ["E501"]  # 行长由 formatter 管

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short --ignore=tests/manual"
markers = [
    "unit: 单元测试 (构建期, 不依赖外部服务)",
    "functional: 功能测试 (部署后容器栈)",
    "regression: 回归测试 (合并 main 前门禁)",
    "api: API 测试 (OpenAI 兼容端点)",
    "e2e: 端到端测试 (完整链路)",
    "performance: 性能测试 (延迟/吞吐/负载, 部署后容器栈)",
    "exploratory: 探索性测试 (边界/降级场景, 部署后容器栈, 非合并门禁)",
]
# P1-04: 抑制第三方库不可控的警告 (业务代码已修复的除外)
# 格式: action:message:category:module:lineno (category 为空则匹配任意类别)
# 注意: message 是正则前缀匹配, category 必须在第 3 字段 (两个冒号之间不能为空)
filterwarnings = [
    # fastapi testclient 内部依赖 httpx 已弃用, 需等 fastapi 升级到 httpx2
    # 注意: StarletteDeprecationWarning 继承自 UserWarning (非 DeprecationWarning)
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:UserWarning",
    # duckduckgo_search 弃用警告 (旧包仍可用, requirements.txt 已迁移到 ddgs)
    "ignore:This package `duckduckgo_search` has been renamed to `ddgs`:RuntimeWarning",
    # httpx/asyncio 内部 transport 未完全关闭 (TestClient 限制, 业务代码无法消除)
    "ignore:unclosed transport <_ProactorSocketTransport:ResourceWarning",
    "ignore:unclosed transport <asyncio._SSLProtocolTransport:ResourceWarning",
    "ignore:Enable tracemalloc to get traceback:ResourceWarning",
]
